--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
-h1, p {
-  font-family: Lato;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+body {
+  margin: 0;
+  padding: 2rem;
+  font-family: sans-serif;
+  }
+  .active{
+     color:red;
+  }
+
+  html, body {
+    margin: 0;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-size: 1.2em;
+  }
+  
+  #page-numbers {
+    list-style: none;
+    display: flex;
+  }
+  
+  #page-numbers > li {
+    margin-right: 0.3em;
+    color: blue;
+    user-select: none;
+    cursor: pointer;
+  }
+  
